[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scripts/fase.gd" type="Script" id=1]
[ext_resource path="res://Cenas/Atirador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Pa.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Parede.tscn" type="PackedScene" id=4]
[ext_resource path="res://Cenas/Chegada.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/tema.tres" type="Theme" id=6]

[node name="Fase1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Atirador" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 160, 320 )
velocidadeInicialBola = 300

[node name="Pa" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 160, 608 )
transform/scale = Vector2( 0.5, 0.5 )
velocidadeGiro = -5

[node name="Pa1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 896, 640 )
transform/scale = Vector2( 0.5, 0.5 )
velocidadeGiro = 7

[node name="Pa2" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 928, 160 )
transform/scale = Vector2( 0.5, 0.5 )
velocidadeGiro = -5

[node name="Parede" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 16, 368 )
transform/scale = Vector2( 0.5, 11.5 )

[node name="Parede4" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 336, 208 )
transform/scale = Vector2( 0.5, 6.5 )

[node name="Parede5" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 544, 400 )
transform/scale = Vector2( 6, 0.5 )

[node name="Parede1" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 512, 720 )
transform/scale = Vector2( 16, 0.499999 )

[node name="Parede2" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 1008, 368 )
transform/scale = Vector2( 0.5, 11.5 )

[node name="Parede3" parent="." instance=ExtResource( 4 )]

transform/pos = Vector2( 512, 16 )
transform/scale = Vector2( 16, 0.5 )

[node name="Chegada" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
margin/left = 384.0
margin/top = 64.0
margin/right = 704.0
margin/bottom = 352.0

[node name="PopupDialog" type="WindowDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 256.0
margin/right = 736.0
margin/bottom = 480.0
popup/exclusive = false
window/title = "Você ganhou!"

[node name="Label" type="Label" parent="PopupDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 6 )
margin/left = 0.0
margin/top = 0.0
margin/right = 448.0
margin/bottom = 160.0
text = "Parabéns!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Menu" type="Button" parent="PopupDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 160.0
margin/right = 288.0
margin/bottom = 192.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[connection signal="body_enter" from="Chegada/Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="pressed" from="PopupDialog/Menu" to="." method="_on_Menu_pressed"]


[editable path="Chegada"]
